--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,72 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+@layer base {
+	:root {
+		--background: 238 13% 95%;
+		--foreground: 238 5% 10%;
+		--card: 238 13% 90%;
+		--card-foreground: 238 5% 15%;
+		--popover: 238 13% 95%;
+		--popover-foreground: 238 95% 10%;
+		--primary: 238 95% 13%;
+		--primary-foreground: 0 0% 100%;
+		--secondary: 238 13% 70%;
+		--secondary-foreground: 0 0% 0%;
+		--muted: 200 13% 85%;
+		--muted-foreground: 238 5% 35%;
+		--accent: 200 13% 80%;
+		--accent-foreground: 238 5% 15%;
+		--destructive: 0 50% 31%;
+		--destructive-foreground: 238 5% 90%;
+		--border: 238 20% 50%;
+		--input: 238 20% 31%;
+		--ring: 238 95% 13%;
+		--radius: 0.5rem;
+		--chart-1: 12 76% 61%;
+		--chart-2: 173 58% 39%;
+		--chart-3: 197 37% 24%;
+		--chart-4: 43 74% 66%;
+		--chart-5: 27 87% 67%;
+	}
+	.dark {
+		--background: 238 13% 10%;
+		--foreground: 238 5% 90%;
+		--card: 238 13% 10%;
+		--card-foreground: 238 5% 90%;
+		--popover: 238 13% 5%;
+		--popover-foreground: 238 5% 90%;
+		--primary: 238 95% 13%;
+		--primary-foreground: 0 0% 100%;
+		--secondary: 238 13% 20%;
+		--secondary-foreground: 0 0% 100%;
+		--muted: 200 13% 25%;
+		--muted-foreground: 238 5% 60%;
+		--accent: 200 13% 25%;
+		--accent-foreground: 238 5% 90%;
+		--destructive: 0 50% 31%;
+		--destructive-foreground: 238 5% 90%;
+		--border: 238 20% 31%;
+		--input: 238 20% 31%;
+		--ring: 238 95% 13%;
+		--radius: 0.5rem;
+		--chart-1: 220 70% 50%;
+		--chart-2: 160 60% 45%;
+		--chart-3: 30 80% 55%;
+		--chart-4: 280 65% 60%;
+		--chart-5: 340 75% 55%;
+	}
+}
+
+@layer base {
+	* {
+		@apply border-border;
+	}
+	body {
+		@apply bg-background text-foreground;
+	}
 }
